submodule updating via hard link isnt working; im having to delete the link and relink.  weird

--- a/_notebooks/2020-04-20-SanDiego-COVID-19.ipynb
+++ b/_notebooks/2020-04-20-SanDiego-COVID-19.ipynb
@@ -1,15 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \"The history of COVID-19 in San Diego County\"\n",
+    "> \"I lay out the case for how the stay-at-home order, closures, and other forms of social distancing probably saved hundreds of lives.\"\n",
+    "- toc: false\n",
+    "- branch: master\n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [covid19, jupyter, epidemiology]\n",
+    "- image: images/some_folder/your_image.png\n",
+    "- hide: false\n",
+    "- search_exclude: false"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hello!\n",
-    "\n",
-    "If you are here to take a look at the COVID-19 situation here in San Diego county then please let me offer you a guided tour.\n",
-    "\n",
-    "First off, if you're not a python programmer then my apologies for the mess.  In the future I will use some tools to clean up the appearance of the notebook and make it easier to see results instead of software.  But until I get that done, here's what you can see here:\n",
-    "\n",
     "### Table of Contents - click on a link to go there\n",
     "\n",
     "Software: (don't care how it's made? skip ahead!)\n",
@@ -21,9 +33,13 @@
     "1. [Fraction of cases which result in hospitalization or worse](#fraction)\n",
     "1. [How many new COVID cases there are today](#daily)\n",
     "1. [Doubling times & flattening the curve](#flat)\n",
-    "1. [Social distancing is what flattened the curve](#distancing)\n",
-    "\n",
-    "\n",
+    "1. [Social distancing is what flattened the curve](#distancing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Introduction\n",
     "\n",
     "A small (yet worryingly large) group of people are currently protesting the things that are keeping us safe: stay at home orders, and closure orders for non-essential business and recreation. Some of these people are informed and honest, they say \"more people will die, but freedom or the economy is more important.\" \n",
@@ -32,7 +48,7 @@
     "\n",
     "I'm trying to show that social distancing, the stay at home orders, and school/park/beach closures have saved many lives. Without it San Diego hospitals would be in crisis with thousands more sick and hundreds more dead than we have today.\n",
     "\n",
-    "Please read the analyses below to understand why.\n"
+    "Please read the analyses below to understand why."
    ]
   },
   {
