another attempt at working with the sdcovid submodule

--- a/_notebooks/2020-04-20-SanDiego-COVID-19.ipynb
+++ b/_notebooks/2020-04-20-SanDiego-COVID-19.ipynb
@@ -65,6 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#collapse\n",
+    "\n",
     "import pandas as pd\n",
     "from dateparser.search import search_dates\n",
     "import seaborn as sns\n",
@@ -124,9 +126,12 @@
     }
    ],
    "source": [
+    "#collapse\n",
     "\n",
-    "# I used wayback machine to collect the county data for the \n",
+    "# This first part was a one time only thing, no longer necessary:\n",
+    "# I used the wayback machine to collect the county data for the \n",
     "# dates before I began this project, starting with first day over 100 cases\n",
+    "# which was March 19th\n",
     "'''get_historical_data = [\n",
     "    'https://web.archive.org/web/20200320184055/https://www.sandiegocounty.gov/content/sdc/hhsa/programs/phs/community_epidemiology/dc/2019-nCoV/status.html',\n",
     "    'https://web.archive.org/web/20200321141257/https://www.sandiegocounty.gov/content/sdc/hhsa/programs/phs/community_epidemiology/dc/2019-nCoV/status.html',\n",
@@ -160,6 +165,7 @@
     "    tab_hist[today] = table\n",
     "    ''';\n",
     "\n",
+    "# That old data, and every day since, is now in the repo\n",
     "# From now on we can just load the data that's already in the repo\n",
     "files = glob.glob('Data/SDcountySituation*.csv') # gets all .csv filenames in directory\n",
     "for afile in files:\n",
