more tweaks, i think its ready now

--- a/_notebooks/2020-04-20-SanDiego-COVID-19.ipynb
+++ b/_notebooks/2020-04-20-SanDiego-COVID-19.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Table of Contents - click on a link to go there\n",
+    "## Table of Contents - click on a link to go there\n",
     "\n",
     "Software: (don't care how it's made? skip ahead!)\n",
     "- [Code to grab data from San Diego County website](#scrape)\n",
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Introduction\n",
+    "## Introduction\n",
     "\n",
     "A small (yet worryingly large) group of people are currently protesting the things that are keeping us safe: stay at home orders, and closure orders for non-essential business and recreation. Some of these people are informed and honest, they say \"more people will die, but freedom or the economy is more important.\" \n",
     "\n",
@@ -84,52 +84,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2020-04-09\n",
-      "2020-03-28\n",
-      "2020-03-29\n",
-      "2020-04-08\n",
-      "2020-03-22\n",
-      "2020-04-03\n",
-      "2020-04-02\n",
-      "2020-04-16\n",
-      "2020-03-23\n",
-      "2020-03-21\n",
-      "2020-04-14\n",
-      "2020-04-15\n",
-      "2020-04-01\n",
-      "2020-03-20\n",
-      "2020-04-05\n",
-      "2020-04-11\n",
-      "2020-03-30\n",
-      "2020-03-24\n",
-      "2020-03-25\n",
-      "2020-03-31\n",
-      "2020-03-19\n",
-      "2020-04-10\n",
-      "2020-04-04\n",
-      "2020-04-12\n",
-      "2020-04-06\n",
-      "2020-03-27\n",
-      "2020-03-26\n",
-      "2020-04-07\n",
-      "2020-04-13\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#collapse\n",
     "\n",
     "# This first part was a one time only thing, no longer necessary:\n",
     "# I used the wayback machine to collect the county data for the \n",
     "# dates before I began this project, starting with first day over 100 cases\n",
-    "# which was March 19th\n",
+    "# which was March 19th.. It's now commented out but left here for posterity\n",
+    "# and reference in case you need to scrape.  I went by hand through wayback \n",
+    "# to select the exact timestamps I used\n",
     "'''get_historical_data = [\n",
     "    'https://web.archive.org/web/20200320184055/https://www.sandiegocounty.gov/content/sdc/hhsa/programs/phs/community_epidemiology/dc/2019-nCoV/status.html',\n",
     "    'https://web.archive.org/web/20200321141257/https://www.sandiegocounty.gov/content/sdc/hhsa/programs/phs/community_epidemiology/dc/2019-nCoV/status.html',\n",
@@ -161,14 +127,20 @@
     "    # record todays data for posterity\n",
     "    table.to_csv(dataf.format(today))\n",
     "    tab_hist[today] = table\n",
-    "    ''';\n",
-    "\n",
-    "# That old data, and every day since, is now in the repo\n",
-    "# From now on we can just load the data that's already in the repo\n",
+    "    ''';"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data from March 19 to today is now in the repo\n",
+    "# Use this cell to load it up if you're starting a new analysis from scratch\n",
     "files = glob.glob('Data/SDcountySituation*.csv') # gets all .csv filenames in directory\n",
     "for afile in files:\n",
     "    dt = afile.split('/')[1][18:28]\n",
-    "    print(dt)\n",
     "    tab_hist[dt] = pd.read_csv(afile,index_col=0,header=0)"
    ]
   },
