--- a/_notebooks/2020-04-20-SanDiego-COVID-19.ipynb
+++ b/_notebooks/2020-04-20-SanDiego-COVID-19.ipynb
@@ -44,9 +44,9 @@
     "\n",
     "Some of these people don't understand fully what's going on. With this post I'm trying to reach those people. So if you say things like \"COVID-19 is not so bad, look how few people have died, we need to end these restrictions\" or \"We already have herd immunity because it was here for months and months, so we don't need these restrictions\", then please read and feel free to ask questions.\n",
     "\n",
-    "I'm trying to show that social distancing, the stay at home orders, and school/park/beach closures have saved many lives. Without it San Diego hospitals would be in crisis with thousands more sick and hundreds more dead than we have today.\n",
+    "I'm trying to show that social distancing, the stay at home orders, and school/park/beach closures have saved many lives. Without it San Diego hospitals would be in crisis with thousands more sick and hundreds more dead than we have today. \n",
     "\n",
-    "Please read the analyses below to understand why."
+    "So if you only read one thing here, please read [this analysis showing that social distancing in San Diego has probably saved hundreds of lives](#distancing). The rest of this notebook may also be useful for you in understanding the severity of the outbreak in San Diego, and how we got there. "
    ]
   },
   {
@@ -54,7 +54,9 @@
    "metadata": {},
    "source": [
     "## Code to scrape the county website\n",
-    "<a id=\"scrape\"></a>"
+    "<a id=\"scrape\"></a>\n",
+    "\n",
+    "If you'd like to see how this is done, just click on the \"Show Code\" buttons below."
    ]
   },
   {
@@ -88,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#collapse\n",
+    "#hide\n",
     "\n",
     "# This first part was a one time only thing, no longer necessary:\n",
     "# I used the wayback machine to collect the county data for the \n",
@@ -136,6 +138,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#collapse\n",
+    "\n",
     "# Data from March 19 to today is now in the repo\n",
     "# Use this cell to load it up if you're starting a new analysis from scratch\n",
     "files = glob.glob('Data/SDcountySituation*.csv') # gets all .csv filenames in directory\n",
@@ -150,6 +154,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#collapse\n",
+    "\n",
     "# Run me every day! Website updates once a day at around 4pm\n",
     "tab = pd.read_html('https://www.sandiegocounty.gov/content/sdc/hhsa/programs/phs/community_epidemiology/dc/2019-nCoV/status.html')\n",
     "#comes down as a list of each column seperately, with the header the same in each column-table\n",
@@ -323,7 +329,8 @@
     }
    ],
    "source": [
-    "# Sstarting 26 March the Total and non-county residents columns disappeared\n",
+    "#collapse\n",
+    "# Starting 26 March the Total and non-county residents columns disappeared\n",
     "# and everythign is under San Diego County Residents, even though I believe that is actually the Total column\n",
     "# if i'm wrong this generates a discontinuity of 20 non-resident cases, making the growth from 25 - 26 March look\n",
     "# smaller than it is, it will lead to an underestimate of the exponential coefficient\n",
@@ -345,6 +352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#collapse\n",
     "cases = pd.Series({key:int(value.loc['Total Positives','Total']) for key,value in tab_hist.items()}).sort_index()\n",
     "hospitalizations = pd.Series({key:int(value.loc['Hospitalizations','Total']) for key,value in tab_hist.items()}).sort_index()\n",
     "icu = pd.Series({key:int(value.loc['Intensive Care','Total']) for key,value in tab_hist.items()}).sort_index()\n",
@@ -360,7 +368,7 @@
     "<a id=\"models\"></a>\n",
     "The classic model of disease outbreaks is an exponential function.  One person infects two. Two infect four. Four infect eight. And in ten easy steps you get to thousands of people, in twenty doubling steps its millions of people infected. \n",
     "\n",
-    "Below is how the suasage is made in the models"
+    "Below is how the suasage is made in the models, click Show Code button to see it."
    ]
   },
   {
@@ -369,6 +377,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#collapse\n",
     "import numpy as np\n",
     "from scipy.optimize import curve_fit\n",
     "from scipy.stats.distributions import t\n",
@@ -469,7 +478,11 @@
    "metadata": {},
    "source": [
     "<a id=\"fraction\"></a>\n",
-    "## Fraction of confirmed COVID-19 cases that get bad, really bad, and dead\n"
+    "## Fraction of confirmed COVID-19 cases that get bad, really bad, and dead\n",
+    "\n",
+    "I'm using these graphs to track a few things about the outbreak.  First, its good to know how many people who have the disease are ending up in hospital or worse.  Secondly, in a later section of this post, I'm using one of these estimates to help predict how many people would be dead now if we didn't social distance.\n",
+    "\n",
+    "However, please don't think the graph below tells you \"how likely am I to die if I get it?\"!! The number of confirmed COVID-19 cases is only a fraction of the true number of people infected with the virus. By some estimates most of the people carrying the virus have no symptoms. And many people who have symptoms are not getting tested.  If the fraction below says 3% die, it may be much much lower.  But right now we can't know how much lower! "
    ]
   },
   {
@@ -531,7 +544,7 @@
     "<a id=\"daily\"></a>\n",
     "## Daily COVID increases in San Diego county\n",
     "\n",
-    "These nubers are the most raw way you can see the curve is flattening.  Under normal steep exponential growth you would see daily numbers that are always getting bigger.  These are starying the same right now, and maybe falling!\n",
+    "These numbers are the most raw way you can see the curve is flattening.  Under normal steep exponential growth you would see daily numbers that are always getting bigger.  These are starying the same right now, and maybe falling!\n",
     "\n"
    ]
   },
@@ -802,15 +815,21 @@
     "\n",
     "Yes, in a big way.\n",
     "\n",
-    "Governor Newsom ordered Californians to stay at home on March 19th.  We know that it takes about 1 week after infection for someone to feel sick, and about 2 weeks for them to get bad enough to need hospitalization [according to this link](https://cdc.gov/coronavirus/2019-ncov/hcp/clinical-guidance-management-patients.html).  That means that new cases being reduced by the stay-at-home order wouldn't happen until after March 26th, and the first reduction in new hospitalizations about April 2nd. \n",
+    "San Diego schools closed on March 13th. Governor Newsom ordered Californians to stay at home on March 19th.  We know that it takes about 1 week after infection for someone to feel sick, and about 2 weeks for them to get bad enough to need hospitalization [according to this link](https://cdc.gov/coronavirus/2019-ncov/hcp/clinical-guidance-management-patients.html).  That means that new cases being reduced by the stay-at-home order wouldn't happen until after March 26th, and the first reduction in new hospitalizations about April 2nd. \n",
     "\n",
-    "See where the COVID hospitalization curve below starts to bend over to a shallower slope?  A bit more than 2 wks after the stay at home order!  The case curve doesn't bend a full week before that, but this is likely becuase we still had a huge backlog of tested people waiting for their results back then.\n",
+    "I generally prefer to look at the hospitalization data because it's the least-wrong measurement we have.  The number of confirmed cases via COVID tests is undercounting how many people have the virus. Probabaly badly undercounting it.  On the other hand, most of the people who have a severe case of the disease will end up in hospital. So I'm going to use it as my main way to measure the course of the outbreak.\n",
     "\n",
-    "You can see this bending of the curve in the doubling time graphs in the last section of this notebook: For confirmed cases the first increases in doubling time are around March 29th. We see the first increases in hospitalization doubling time are on April 4th or so. In the last weeks of March the estimated doubling time was around 3 to 5 days for all metrics: cases, hospitalizations, ICU patients, and deaths. Today the doubling time for these is around 10 - 20 days. \n",
+    "Take a look at the yellow dots and lines on the graph below.  See where the COVID hospitalization curve below starts to bend over to a shallower slope?  A bit more than 2 wks after the stay at home order!  The case curve doesn't bend a full week before that, but this is likely becuase we still had a huge backlog of tested people waiting for their results back then.\n",
     "\n",
-    "You can see this curve bendingin the graph below. In March the growth rate of cases, hospitalizations, and deaths is steep and steady. In April things start to bend, and we have ended up with a steady, shallower rate of growth right now.\n",
+    "You can also see this bending of the curve in the doubling time graphs in the last section of this notebook: We see the first increases in hospitalization doubling time are on April 4th or so. In the last weeks of March the estimated doubling time was around 3 to 5 days for all metrics: cases, hospitalizations, ICU patients, and deaths. Today the doubling time for these is around 10 - 20 days. \n",
     "\n",
-    "If there had been no stay at home order, then that late March doubling time would have continued until today. That would mean San Diego would have many times more infections than it currently does.  The exact difference you can see below:  "
+    "Lets look back again at the graph below: In March the growth rate of cases, hospitalizations, and deaths is steep and steady. In April things start to bend, and today we have ended up with a steady, shallower rate of growth right now.\n",
+    "\n",
+    "This graph shows what I want everyone to know: \n",
+    "\n",
+    "If there had been no stay at home order, then that late March doubling time would have continued until today. That would mean San Diego would have many times more infections than it currently does.  There would be hundreds (or maybe by now, thousands) of more people dead if we had not all stayed at home!!\n",
+    "\n",
+    "Social distancing saved lives!"
    ]
   },
   {
