reformat code section

--- a/_notebooks/2020-04-20-SanDiego-COVID-19.ipynb
+++ b/_notebooks/2020-04-20-SanDiego-COVID-19.ipynb
@@ -61,11 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#collapse\n",
+    "\n",
+    "# If you're starting a new analysis from scratch, you need to run this cell. \n",
+    "# if you're just pulling new data for today on an already-running notebook, you can skip this step\n",
     "\n",
     "import pandas as pd\n",
     "from dateparser.search import search_dates\n",
@@ -81,16 +84,9 @@
     "locf = 'Data/SDcountyLocations-{}.csv'\n",
     "zipf = 'Data/SDcountyZipcodes-{}.csv'\n",
     "\n",
-    "tab_hist = {}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#hide\n",
+    "tab_hist = {}\n",
+    "\n",
+    "\n",
     "\n",
     "# This first part was a one time only thing, no longer necessary:\n",
     "# I used the wayback machine to collect the county data for the \n",
@@ -129,19 +125,9 @@
     "    # record todays data for posterity\n",
     "    table.to_csv(dataf.format(today))\n",
     "    tab_hist[today] = table\n",
-    "    ''';"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#collapse\n",
+    "    ''';\n",
     "\n",
-    "# Data from March 19 to today is now in the repo\n",
-    "# Use this cell to load it up if you're starting a new analysis from scratch\n",
+    "# Data from March 19 to today is now in the repo, load it\n",
     "files = glob.glob('Data/SDcountySituation*.csv') # gets all .csv filenames in directory\n",
     "for afile in files:\n",
     "    dt = afile.split('/')[1][18:28]\n",
@@ -150,43 +136,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 460,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#collapse\n",
-    "\n",
-    "# Run me every day! Website updates once a day at around 4pm\n",
-    "tab = pd.read_html('https://www.sandiegocounty.gov/content/sdc/hhsa/programs/phs/community_epidemiology/dc/2019-nCoV/status.html')\n",
-    "#comes down as a list of each column seperately, with the header the same in each column-table\n",
-    "tabs = [ x.drop(0) for x in tab]\n",
-    "table = pd.concat(tabs)\n",
-    "# setup header and index\n",
-    "cs =  table.iloc[0,:].to_list()\n",
-    "cs[0] = 'index'\n",
-    "table.columns = cs\n",
-    "table = table.drop(1).set_index('index')\n",
-    "# get todays date from that header we threw away on each column\n",
-    "# great, they've updated the format again and now it says \n",
-    "#\"updated Date X with data through Date X-1\"\n",
-    "# it's like they're trying to make it harder for me by changing something every day!\n",
-    "# need to go back to Date X format for consistency with previous data\n",
-    "# OLD: dt = search_dates(tab[0][0][0])[-1][1]\n",
-    "dt = search_dates(tab[0][0][0])[-2][1]\n",
-    "today = dt.strftime('%Y-%m-%d')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 417,
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Data for 2020-04-21\n",
+      "NOTE: these are cumulative totals... for instance, there are fewer people currently hospitalized than this number, because some of them have recovered or died.\n",
       "2020-04-21\n"
      ]
     },
@@ -323,13 +281,35 @@
        "Deaths              87"
       ]
      },
-     "execution_count": 417,
+     "execution_count": 460,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#collapse\n",
+    "\n",
+    "# Run this cell every day to pull new data from the county! \n",
+    "# Website updates once a day at around 4pm\n",
+    "tab = pd.read_html('https://www.sandiegocounty.gov/content/sdc/hhsa/programs/phs/community_epidemiology/dc/2019-nCoV/status.html')\n",
+    "#comes down as a list of each column seperately, with the header the same in each column-table\n",
+    "tabs = [ x.drop(0) for x in tab]\n",
+    "table = pd.concat(tabs)\n",
+    "# setup header and index\n",
+    "cs =  table.iloc[0,:].to_list()\n",
+    "cs[0] = 'index'\n",
+    "table.columns = cs\n",
+    "table = table.drop(1).set_index('index')\n",
+    "# get todays date from that header we threw away on each column\n",
+    "# great, they've updated the format again and now it says \n",
+    "#\"updated Date X with data through Date X-1\"\n",
+    "# it's like they're trying to make it harder for me by changing something every day!\n",
+    "# need to go back to Date X format for consistency with previous data\n",
+    "# OLD: dt = search_dates(tab[0][0][0])[-1][1]\n",
+    "dt = search_dates(tab[0][0][0])[-2][1]\n",
+    "today = dt.strftime('%Y-%m-%d')\n",
+    "\n",
+    "\n",
     "# Starting 26 March the Total and non-county residents columns disappeared\n",
     "# and everythign is under San Diego County Residents, even though I believe that is actually the Total column\n",
     "# if i'm wrong this generates a discontinuity of 20 non-resident cases, making the growth from 25 - 26 March look\n",
@@ -342,22 +322,17 @@
     "# record todays data for posterity\n",
     "table.to_csv(dataf.format(today))\n",
     "tab_hist[today] = table\n",
-    "print(today)\n",
-    "table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 418,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#collapse\n",
+    "\n",
     "cases = pd.Series({key:int(value.loc['Total Positives','Total']) for key,value in tab_hist.items()}).sort_index()\n",
     "hospitalizations = pd.Series({key:int(value.loc['Hospitalizations','Total']) for key,value in tab_hist.items()}).sort_index()\n",
     "icu = pd.Series({key:int(value.loc['Intensive Care','Total']) for key,value in tab_hist.items()}).sort_index()\n",
     "deaths = pd.Series({key:int(value.loc['Deaths','Total']) for key,value in tab_hist.items()}).sort_index()\n",
-    "totals = pd.DataFrame( {'Confirmed cases':cases, 'Hospitalizations':hospitalizations, 'ICU patients':icu, 'Deaths':deaths})"
+    "totals = pd.DataFrame( {'Confirmed cases':cases, 'Hospitalizations':hospitalizations, 'ICU patients':icu, 'Deaths':deaths})\n",
+    "\n",
+    "print('Data for ' + today)\n",
+    "print('NOTE: these are cumulative totals... for instance, there are fewer people currently hospitalized than this number, because some of them have recovered or died.')\n",
+    "print(today)\n",
+    "table"
    ]
   },
   {
