added update message to front of blog

--- a/_notebooks/2020-04-20-SanDiego-COVID-19.ipynb
+++ b/_notebooks/2020-04-20-SanDiego-COVID-19.ipynb
@@ -20,6 +20,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For at least the next few weeks I will keep this data blog updated with the latest COVID-19 numbers every day. The numbers come from the San Diego County website, and they update in the early evening. This page will update somepoint in the night or early AM the next day.  \n",
+    "\n",
     "You can clone [the Jupyter notebook powering this blog post from my Github repo](https://github.com/jasongfleischer/SanDiegoCountyCOVID19). The repo includes this notebook, various plots, and all the data I've scraped from the County of San Diego website. I welcome comments in the issues forum or contributions to the software via pull request. \n",
     "\n",
     "You may also reach me via Twitter [@jasongfleischer](https://www.twitter.com/jasongfleischer) or email jfleischer@salk.edu\n",
